# data-struct-algos

./: Cargo.toml  README.md
benches/: Cargo.toml
benches/benches/: insertion_sort.rs  merge_sort.rs  sorts.rs
crates/insertion_sort/: Cargo.toml
crates/insertion_sort/src/: lib.rs
crates/merge_sort/: Cargo.toml
crates/merge_sort/src/: lib.rs
