[package]
name = "benches"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insertion_sort = { path = "../crates/insertion_sort" }
merge_sort = { path = "../crates/merge_sort" }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "insertion_sort"
harness = false
